package com.alex.kotlin.javadesignmode.decorator

/**
 * @author Alex
 * @date 2019/4/16 下午4:55
 * @email 18238818283@sina.cn
 * @desc ...
 */
abstract class Decorator (val component: Component) : Component()